--- a/routing/deploy/eirini-routing.yml
+++ b/routing/deploy/eirini-routing.yml
@@ -155,6 +155,14 @@ rules:
   - get
   - watch
   - list
+- apiGroups:
+  - extensions
+  resources:
+  - ingresses
+  verbs:
+  - get
+  - create
+  - update
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
