--- a/deploy/image-controller.yml
+++ b/deploy/image-controller.yml
@@ -1,16 +1,46 @@
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: image-controller
+  namespace: eirini-core
+spec:
+  selector:
+    matchLabels:
+      name: image-controller
+  template:
+    metadata:
+      labels:
+        name: image-controller
+    spec:
+      dnsPolicy: ClusterFirst
+      serviceAccountName: image-controller
+      securityContext:
+        runAsNonRoot: true
+      containers:
+      - name: image-controller
+        image: eirini/image-controller
+        imagePullPolicy: Always
+        resources:
+          requests:
+            cpu: 15m
+            memory: 15Mi
+          limits:
+            cpu: 100m
+            memory: 200Mi
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: image-controller
-  namespace: tinypaas-core
+  namespace: eirini-core
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: image-controller
-  namespace: tinypaas-core
+  namespace: eirini-core
 rules:
 - apiGroups:
   - policy
@@ -40,7 +70,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: image-controller
-  namespace: tinypaas-core
+  namespace: eirini-core
 roleRef:
   kind: Role
   name: image-controller
@@ -48,7 +78,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: image-controller
-  namespace: tinypaas-core
+  namespace: eirini-core
 
 ---
 apiVersion: policy/v1beta1
@@ -124,4 +154,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: image-controller
-  namespace: tinypaas-core
+  namespace: eirini-core
